# aggregatepc

./: .gitignore  AGENTS.md  Makefile  README.md  SPEC.md  SPRINTS.md  aggregatepc.py  pyproject.toml  spec.txt
cluster/: __init__.py  config.py  detect.py
cluster/compute/: gpu_allocator.py  scheduler.py  task_queue.py
cluster/models/: ollama.py  registry.py
cluster/network/: discovery.py  heartbeat.py  relay.py
cluster/nodes/: __init__.py  controller.py  worker.py
cluster/tasks/: batch_compute.py  llm_inference.py
configs/: cluster.conf
scripts/: auto_profile.py  start_inference.py  start_worker.py
tests/: test_basic.py
