[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aggregatepc"
version = "0.1.0"
description = "Distributed heterogeneous compute for idle PCs"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "AggregatePC Contributors"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "zeroconf>=0.130.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
aggregatepc = "aggregatepc:main"

[tool.setuptools]
py-modules = ["aggregatepc"]

[tool.setuptools.packages.find]
include = ["cluster*", "scripts*", "tasks*"]

[tool.setuptools.package-data]
configs = ["*.conf"]
